    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#00796B"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome to"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Just Java"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="45dp"
            android:text="Coffee Shop"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="normal" />

    </LinearLayout>


    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="textCapWords"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:text="@string/toppings"
        style="@style/HeaderTextStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"/>

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:paddingLeft="24dp"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"/>

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chocolate"
        android:paddingLeft="24dp"
        android:layout_marginLeft="16dp"
        android:textSize="16sp" />

    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Quantity"
        style="@style/HeaderTextStyle"
        android:layout_marginLeft="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="submitBill"
        android:text="@string/Check_Cart"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/bill_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bill "
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:background="@drawable/rounded_corner_view"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_margin="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/Order"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"/>

    </LinearLayout>
    </ScrollView>